--- a/index.html
+++ b/index.html
@@ -9,25 +9,171 @@
                                                                                    
 -->
 <html lang="ko-kr">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title></title>
-
-<!-- track codes -->
-</head>
-<body>
-
-
-<!-- typeform starts -->
-<div class='tp box'>
-    <div data-tf-widget="hRyWLyrc" data-tf-opacity="0" data-tf-iframe-props="title=landing" data-tf-medium="snippet" data-tf-hidden="utm_source=xxxxx,utm_medium=xxxxx,utm_campaign=xxxxx,utm_term=xxxxx,utm_content=xxxxx" style="width:100%;height:400px;">
+    <!-- track codes -->
+    <!-- styled -->
+    <link rel="stylesheet" href="./index.css" />
+  </head>
+  <body>
+    <!-- typeform starts -->
+    <div class="tp box">
+      <div class="GreenBox">
+        <img src="./images/correcting.png" alt="LOGOIMG" class="LogoImg" />
+        <div class="contentBox">
+          <div>
+            <h1 class="thumbnail">
+              내 코드 첨삭, <br />코렉팅에서 한국어로 <br />편하게 받으세요!
+            </h1>
+            <p class="subComent">
+              지금 내가 작성한 코드, <br />
+              돌아가기는 하는데 잘 쓴게 맞을까?
+            </p>
+          </div>
+          <img
+            src="./images/block1.png"
+            alt="block_Image"
+            style="width: 21.25rem; margin-right: 0.125rem"
+          />
+        </div>
+      </div>
+      <div class="WhiteBox">
+        <div class="CommentBox">
+          <p class="contentTitle">
+            <strong>코렉팅</strong>은 이런 분들을 위해서 태어났어요!
+          </p>
+          <p class="subTitle">
+            내 코드를 다른 개발자에게 첨삭 받고 싶었던 적 있으신가요?<br />
+            코렉팅은 이런 불편함을 해결해 드릴 코드 첨삭 서비스예요!
+          </p>
+          <div class="imgesContentBox">
+            <div class="imageContent">
+              <img src="./images/Mask group.png" alt="" />
+              <p>컴공과학생</p>
+              <p>
+                컴공과 학생 컴공과 학생 <br />
+                컴공과 학생
+              </p>
+            </div>
+            <div class="imageContent">
+              <img src="./images/Mask group.png" alt="" />
+              <p>컴공과학생</p>
+              <p>
+                컴공과 학생 컴공과 학생 <br />
+                컴공과 학생
+              </p>
+            </div>
+            <div class="imageContent">
+              <img src="./images/Mask group.png" alt="" />
+              <p>컴공과학생</p>
+              <p>
+                컴공과 학생 컴공과 학생 <br />
+                컴공과 학생
+              </p>
+            </div>
+            <div class="imageContent">
+              <img src="./images/Mask group.png" alt="" />
+              <p>컴공과학생</p>
+              <p>
+                컴공과 학생 컴공과 학생 <br />
+                컴공과 학생
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="YellowGreenBox">
+        <div class="yellowGreenCommnetBox">
+          <p class="contentTitle">
+            <strong>1:1 밀착 튜터링</strong>과 <br />
+            눈높이에 딱 맞는 커리큘럼
+          </p>
+          <p class="contentSubtitle">
+            5:1 밀착 튜터링으로 수업의 질을 보장해요! <br />
+            초코의 모든 커리큘럼은 소비자 평가단과<br />
+            전문가의 2차 검수를 거쳐 만들어져요.
+          </p>
+        </div>
+        <img src="./images/layer_2.png" alt="" id="crocodile" />
+      </div>
+      <div class="GreenBox">
+        <p class="GreenBoxTitle">
+          <strong>현업자</strong>가 직접 진행하는 실시간 코드리뷰
+        </p>
+        <p class="GreenBoxSubTitle">
+          내 코드를 다른 개발자에게 첨삭 받고 싶었던 적 있으신가요?<br />
+          코렉팅은 이런 불편함을 해결해 드릴 코드 첨삭 서비스예요!
+        </p>
+        <img src="./images/block4.png" alt="" class="birdImg" />
+      </div>
+      <div class="YellowGreenBox">
+        <div class="yellowGreenCommnetBox">
+          <p class="contentTitle">
+            클린 코드 때문에 부트캠프 가세요? <br />
+            <strong>필요한 부분만 피드백</strong> 받으세요.
+          </p>
+          <p class="contentSubtitle">
+            5:1 밀착 튜터링으로 수업의 질을 보장해요!<br />
+            초코의 모든 커리큘럼은 소비자 평가단과 <br />
+            전문가의 2차 검수를 거쳐 만들어져요.
+          </p>
+        </div>
+        <img src="./images/Group 13.png" alt="" id="talkRoom" />
+      </div>
+      <div class="WhiteBox">
+        <div class="flexBox">
+          <p class="contentTitle">
+            코렉팅 유저들의 <strong>내돈내산 후기!</strong>
+          </p>
+          <p class="subTitle">이용자들이 남긴 후기로 코렉팅 체험을 해보세요.</p>
+        </div>
+        <img src="./images/Group 20.png" alt="" class="profileImg" />
+      </div>
+      <div
+        data-tf-widget="hRyWLyrc"
+        data-tf-opacity="0"
+        data-tf-iframe-props="title=landing"
+        data-tf-medium="snippet"
+        data-tf-hidden="utm_source=xxxxx,utm_medium=xxxxx,utm_campaign=xxxxx,utm_term=xxxxx,utm_content=xxxxx"
+        style="width: 100%; height: 400px"
+      ></div>
+      <script src="//embed.typeform.com/next/embed.js"></script>
     </div>
-    <script src="//embed.typeform.com/next/embed.js"></script>
-</div>
-<!-- typeform ends -->
-
-</body>
-
+    <!-- typeform ends -->
+    <footer>
+      <div class="imgBox">
+        <img
+          src="./images/invisible_logo_blue.png"
+          alt="invisible_logo"
+          class="footerImg"
+        />
+      </div>
+      <div class="contentMenu">
+        <h6 class="grayFont">사업자 등록</h6>
+        <h5 class="blackFont">149-86-02364</h5>
+        <h6 class="grayFont">|</h6>
+        <h6 class="grayFont">통신판매업 신고번호</h6>
+        <h5 class="blackFont">2021-서울성동-02248</h5>
+        <h6 class="grayFont">|</h6>
+        <h6 class="grayFont">대표이사 / 개인정보관리 책임자</h6>
+        <h5 class="blackFont">이은정</h5>
+        <h6 class="grayFont">|</h6>
+        <h5 class="blackFont"><strong>개인정보처리방침</strong></h5>
+        <h6 class="grayFont">주식회사 인비저블</h6>
+        <h6 class="grayFont">|</h6>
+        <h6 class="grayFont">서울특별시 성동구 뚝섬로13길 38, 601호</h6>
+        <h6 class="grayFont">|</h6>
+        <h6 class="grayFont">support@choco.dev</h6>
+        <h6 class="grayFont">|</h6>
+        <h6 class="grayFont">02-6093-0706</h6>
+        <h6 class="grayFont">|</h6>
+        <h6 class="grayFont">호스팅 제공자</h6>
+        <h6 class="grayFont">|</h6>
+        <h6 class="grayFont">GCP, github hosting</h6>
+      </div>
+    </footer>
+  </body>
 </html>
